# stm32f411-blink-rs

./: Cargo.toml
.cargo/: config.toml
