[package]
name = "stm32f411-blink-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embedded-hal = "1.0.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
stm32f4xx-hal = { version = "0.22.0", features = ["stm32f411"] }

[[bin]]
name = "blink"
harness = false
