[package]
name = "stm32f411-blink-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
embedded-hal = "1.0.0"
fugit = "0.3.7"
log = "0.4.22"
panic-halt = "0.2.0"
panic-rtt-target = "0.1.3"
rtt-log = "0.4.0"
rtt-target = "0.5.0"
stm32f4xx-hal = { version = "0.22.0", features = ["stm32f411","usb_fs"] }
usb-device = "0.3.2"
usbd-serial = "0.2.2"

[[bin]]
name = "blink"
harness = false

[[bin]]
name = "blink_defmt"
harness = false

[[bin]]
name = "blink_timer"
harness = false

[[bin]]
name = "usb"
harness = false

[[bin]]
name = "usb_irq"
harness = false
